--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "url": "git+https://github.com/VincentCastelli/hrsf95-mvp.git"
   },
   "author": "Vincent Castelli",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/VincentCastelli/hrsf95-mvp/issues"
   },
   "homepage": "https://github.com/VincentCastelli/hrsf95-mvp#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "create-react-class": "^15.6.3",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
-    "html-loader": "^0.5.5",
     "mongoose": "^5.2.1",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
@@ -41,12 +41,15 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.10.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "nodemon": "^1.17.5",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.1"
