--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "mongoose": "^5.2.1",
+    "pixi.js": "^4.8.1",
     "prop-types": "^15.6.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-phaser": "^0.1.6",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "react-pixi": "^0.9.16",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1"
   },
