--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.10.0",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.3.1",
     "mini-css-extract-plugin": "^0.4.1",
     "nodemon": "^1.17.5",
     "webpack": "^4.15.1",
