--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
   },
   "homepage": "https://github.com/VincentCastelli/hrsf95-mvp#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "create-react-class": "^15.6.3",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
     "mongoose": "^5.2.1",
-    "pixi.js": "^4.8.1",
+    "phaser": "^3.10.1",
     "prop-types": "^15.6.1",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-pixi": "^0.9.16",
+    "react-phaser": "^0.1.6",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1"
   },
@@ -49,6 +50,7 @@
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
     "eslint-plugin-react": "^7.10.0",
+    "expose-loader": "^0.7.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.3.1",
     "mini-css-extract-plugin": "^0.4.1",
